# backend

./: .dockerignore  .gitignore  API-endpoints.md  API_KEY_MIGRATION_COMPLETE.md  DATABASE-DDL.md  DB documentation.md  DB-DDL.txt  DB-documentation.md  Dockerfile  ENDPOINT_IMPLEMENTATION.md  INVOICE_AGENT_COMPLETE.md  JWT_SIGNING_KEYS_MIGRATION.md  Kashi-Finances-technical-doc.md  PERFORMANCE-ARCHITECTURE-COMPARISON.md  PERFORMANCE-OPTIMIZATION-RECOMMENDATIONS.md  PERFORMANCE-QUICK-START.md  PERFORMANCE-SUMMARY.md  PROJECT-TODOS.md  README.md  RLS_INTEGRATION_COMPLETE.md  RPC-documentation.md  SEED-SYSTEM-CATEGORIES.sql  SUPABASE-auth.md  SUPABASE_AUTH_IMPLEMENTATION.md  SUPABASE_AUTH_SETUP.md  demo_endpoint.py  invoice-agent-specs.md  kashi-agents-architecture.md  pyproject.toml  pyrightconfig.json  quickstart.sh  recommendation-agent-specs.md  recommendation-system-specs.md  requirements.txt
.github/: copilot-instructions.md
.github/instructions/: adk-agents.instructions.md  api-architecture.instructions.md  db.instructions.md  supabase.instructions.md
.github/prompts/: new-adk-agent.prompt.md  new-adk-endpoint.prompt.md  new-endpoint.prompt.md  test-agent.prompt.md
.github/workflows/: ci.yaml  ci.yml  prod.yaml  prod.yml  staging.yaml  staging.yml
backend/: __init__.py  config.py  main.py
backend/agents/: INVOICE_AGENT.md  __init__.py  invoice_agent.py
backend/auth/: __init__.py  auth.py  dependencies.py
backend/db/: __init__.py  client.py
backend/routes/: __init__.py  accounts.py  auth.py  budgets.py  (+10 more)
scripts/: test_recommendations.py
tests/: __init__.py  conftest.py  test_accounts.py  test_profile.py  test_rpc_delete_functions.py  test_rpc_functions.py  test_rpc_transfer_and_account_functions.py  test_transactions.py  test_transfers.py  test_transfers_refactor.py
(+147 files in other folders)
