[project]
name = "kashi-backend"
version = "0.1.0"
description = "Kashi Finances Backend - FastAPI service with AI-powered financial tools"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    # Core web framework
    "fastapi>=0.120.4,<1.0.0",
    "starlette>=0.49.3,<1.0.0",
    "uvicorn[standard]>=0.34.0,<1.0.0",
    "pydantic>=2.12.3,<3.0.0",
    "python-multipart>=0.0.9",
    
    # Authentication & Database
    "supabase>=2.23.0,<3.0.0",
    "PyJWT>=2.10.1,<3.0.0",
    "cryptography>=46.0.3",
    
    # Google Gemini SDK for Invoice Agent and Recommendation Service
    # - Invoice Agent: Single-shot multimodal OCR
    # - Recommendation Service: Google Search grounding for web-verified product recommendations
    "google-genai>=1.41.0,<2.0.0",
    
    # Logging and utilities
    "python-dotenv>=1.0.0,<2.0.0",
    "Pillow>=11.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=0.24.0",
    "black>=23.12.1",
    "mypy>=1.8.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=0.24.0",
    "black>=23.12.1",
    "mypy>=1.8.0",
    "ruff>=0.1.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]  # Line too long - handled by formatter

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
